GearsetPOC/force-app/main/default/objects/Knowledge__kav/fields/Bug_Issue_Customer_Received__c.field-meta.xml
<CustomField>
    <fullName>Bug_Issue_Customer_Received__c</fullName>
    <label>Issue Customer Received</label>
    <length>255</length>
    <type>Text</type>
</CustomField>