GearsetPOC/force-app/main/default/objects/Knowledge__kav/fields/Bug_More_Examples_Needed__c.field-meta.xml
<CustomField>
    <fullName>Bug_More_Examples_Needed__c</fullName>
    <label>More Examples Needed?</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>