GearsetPOC/force-app/main/default/objects/Knowledge__kav/fields/FAQ_Available_on_Eurostar_4_Agents__c.field-meta.xml
<CustomField>
    <fullName>FAQ_Available_on_Eurostar_4_Agents__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available on Eurostar 4 Agents</label>
    <type>Checkbox</type>
</CustomField>