GearsetPOC/force-app/main/default/objects/Knowledge__kav/fields/FAQ_Available_on_Eurostar_com__c.field-meta.xml
<CustomField>
    <fullName>FAQ_Available_on_Eurostar_com__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Available on Eurostar.com</label>
    <type>Checkbox</type>
</CustomField>