GearsetPOC/force-app/main/default/objects/Knowledge__kav/fields/FAQ_Customer_Text__c.field-meta.xml
<CustomField>
    <fullName>FAQ_Customer_Text__c</fullName>
    <label>Customer Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>