GearsetPOC/force-app/main/default/objects/Knowledge__kav/fields/FAQ_Market__c.field-meta.xml
<CustomField>
    <fullName>FAQ_Market__c</fullName>
    <description>test field</description>
    <label>Market</label>
    <length>255</length>
    <type>Text</type>
</CustomField>