GearsetPOC/force-app/main/default/objects/Knowledge__kav/fields/FAQ_Question_Import__c.field-meta.xml
<CustomField>
    <fullName>FAQ_Question_Import__c</fullName>
    <label>Question_Import</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>