GearsetPOC/force-app/main/default/objects/Knowledge__kav/fields/Media_Centre_Article_Download_url__c.field-meta.xml
<CustomField>
    <fullName>Media_Centre_Article_Download_url__c</fullName>
    <label>Article Download url</label>
    <length>250</length>
    <type>Text</type>
</CustomField>