GearsetPOC/force-app/main/default/objects/Knowledge__kav/fields/Media_Centre_Is_this_Featured__c.field-meta.xml
<CustomField>
    <fullName>Media_Centre_Is_this_Featured__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is this Featured</label>
    <type>Checkbox</type>
</CustomField>