GearsetPOC/force-app/main/default/objects/Knowledge__kav/fields/The_Knowledge_Answer__c.field-meta.xml
<CustomField>
    <fullName>The_Knowledge_Answer__c</fullName>
    <label>Answer</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>