GearsetPOC/force-app/main/default/objects/Knowledge__kav/fields/The_Knowledge_Article_Name__c.field-meta.xml
<CustomField>
    <fullName>The_Knowledge_Article_Name__c</fullName>
    <label>Article Name</label>
    <type>TextArea</type>
</CustomField>