GearsetPOC/force-app/main/default/objects/Knowledge__kav/fields/The_Knowledge_Feedback_Please_Contact__c.field-meta.xml
<CustomField>
    <fullName>The_Knowledge_Feedback_Please_Contact__c</fullName>
    <label>Any Feedback? Please Contact:</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Amelle.Mouhaddib@eurostar.com</fullName>
            </value>
            <value>
                <fullName>Anne.Albrespy@eurostar.com</fullName>
            </value>
            <value>
                <fullName>Anthony.Allen@eurostar.com</fullName>
            </value>
            <value>
                <fullName>Aurore.festaud@eurostar.com</fullName>
            </value>
            <value>
                <fullName>Bob.Kemble@eurostar.com</fullName>
            </value>
            <value>
                <fullName>Chloe.Boyd@eurostar.com</fullName>
            </value>
            <value>
                <fullName>David.Chalmers@eurostar.com</fullName>
            </value>
            <value>
                <fullName>Dianne.Brough@eurostar.com</fullName>
            </value>
            <value>
                <fullName>Eleanor.Brown@eurostar.com</fullName>
            </value>
            <value>
                <fullName>Greg.Inglis@eurostar.com</fullName>
            </value>
            <value>
                <fullName>Holly.Owen-Woods@eurostar.com</fullName>
            </value>
            <value>
                <fullName>Ian.Overhead@eurostar.com</fullName>
            </value>
            <value>
                <fullName>JamiMarie.Botfield@eurostar.com</fullName>
            </value>
            <value>
                <fullName>Jon.Witt@eurostar.com</fullName>
            </value>
            <value>
                <fullName>Julian.Holmes@eurostar.com</fullName>
            </value>
            <value>
                <fullName>Julie.Banks@eurostar.com</fullName>
            </value>
            <value>
                <fullName>Laurence.Brocard@eurostar.com</fullName>
            </value>
            <value>
                <fullName>Lesley.Retallack@eurostar.com</fullName>
            </value>
            <value>
                <fullName>Lucie.Thevenon@eurostar.com</fullName>
            </value>
            <value>
                <fullName>Luke.Rees@eurostar.com</fullName>
            </value>
            <value>
                <fullName>Marlies.Alsem@eurostar.com</fullName>
            </value>
            <value>
                <fullName>Matthew.Rogers@eurostar.com</fullName>
            </value>
            <value>
                <fullName>Matthew.Sullivan@eurostar.com</fullName>
            </value>
            <value>
                <fullName>Natalia.Garcia-Araguas@eurostar.com</fullName>
            </value>
            <value>
                <fullName>Neil.Roberts@eurostar.com</fullName>
            </value>
            <value>
                <fullName>Nigel.Gower@eurostar.com</fullName>
            </value>
            <value>
                <fullName>Odile.Delhove@eurostar.com</fullName>
            </value>
            <value>
                <fullName>Oznur.Acikgoz@eurostar.com</fullName>
            </value>
            <value>
                <fullName>Rebecca.O&#39;Leary@eurostar.com</fullName>
            </value>
            <value>
                <fullName>Romain.Eymard@eurostar.com</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>