GearsetPOC/force-app/main/default/objects/Knowledge__kav/fields/The_Knowledge_Keywords__c.field-meta.xml
<CustomField>
    <fullName>The_Knowledge_Keywords__c</fullName>
    <label>Keywords</label>
    <length>255</length>
    <type>Text</type>
</CustomField>