GearsetPOC/force-app/main/default/objects/Knowledge__kav/fields/Videos__c.field-meta.xml
<CustomField>
    <fullName>Videos__c</fullName>
    <formula>HYPERLINK(&quot;/apex/ArticleMediaWizardMainPage?media-type=video&amp;article-id=&quot; + ArticleNumber , &#39;Click to open videos&#39;, &#39;_blank&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Videos</label>
    <type>Text</type>
</CustomField>