GearsetPOC/force-app/main/default/objects/Knowledge__kav/recordTypes/Media_Centre.recordType-meta.xml
<RecordType>
    <fullName>Media_Centre</fullName>
    <active>true</active>
    <label>Media_Centre</label>
</RecordType>