GearsetPOC/force-app/main/default/objects/Knowledge__kav/recordTypes/The_Knowledge.recordType-meta.xml
<RecordType>
    <fullName>The_Knowledge</fullName>
    <active>true</active>
    <label>The_Knowledge</label>
</RecordType>